# Art-NewsLetter-Chile

./: .env.example  .gitignore  .railwayignore  README.md  docker-compose.yml  railway.json  setup_env.sh
backend/: Dockerfile  alembic.ini  app.py  database.py  email_service.py  models.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_events.py  0003_add_newsletter.py
backend/app/: main.py  worker.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analytics.py  collector.py  events.py  newsletters.py  subscribers.py
backend/app/collector/: pipeline.py
backend/app/collector/scrapers/: agendas.py  base.py  chile_cultura.py  foundations.py  galleries.py  instagram.py  mnba.py  museums.py  theaters.py
backend/app/core/: celery_app.py  config.py  email.py  storage.py
backend/app/db/: base.py
backend/app/models/: enums.py  event.py  newsletter.py  subscriber.py
backend/app/schemas/: event.py  newsletter.py  subscriber.py
backend/app/services/: analytics_service.py  event_service.py  newsletter_service.py  subscriber_service.py  template_service.py
backend/app/templates/newsletter/: base.html
backend/temp_html/: aninat.html  aninat_2025.html  gam.html  mmdh.html  mmdh_js.js  nac.html  nac_correct.html  pready_home.html  precolombino.html  precolombino_full.html
backend/templates/: confirmation.html  newsletter.html
backend/tests/: conftest.py  test_api.py  test_models.py
docs/: architecture.md
frontend/: package-lock.json
(+23 files in other folders)
